--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,9 @@ apply plugin: 'java'
 sourceCompatibility = '1.8'
 targetCompatibility = '1.8'
 
-test {
-    include '**/*Test.java'
-}
-
 dependencies {
-    compile 'com.google.guava:guava:19.0'
-    compile 'com.google.code.findbugs:jsr305:3.0.0'
+    compileOnly 'com.google.code.findbugs:jsr305:3.0.0'
+
     testCompile 'junit:junit:4.12'
+    testCompile 'com.google.guava:guava:19.0'
 }
