--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,11 @@ gradle-app.setting
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
 
+### IntelliJ ###
+
+*.iml
+.idea/workspace.xml
+
 ### Java ###
 
 *.class
